--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,10 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
-version: 2
+version: 2.1
+orbs:
+  sonar: bulderbank/sonar@1.2.1
+
 jobs:
   build:
     docker:
